--- a/css/main.css
+++ b/css/main.css
@@ -186,13 +186,14 @@ nav .navbar-nav .nav-item .nav-link:hover {
 }
 
 #about .third-col .card .card-body p {
-  margin-bottom: 4.8rem !important;
+  margin-bottom: 6.1rem !important;
 }
 
 #about .card {
   border: none;
   padding-bottom: 2rem;
   margin-bottom: 3rem;
+  text-align: justify !important;
 }
 
 #about .card .card-img-top {
